# ai_investing_0.1

./: .env.example  .gitignore  AGENTS 2.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  RETROSPECTIVE.md  ROADMAP.md  STATE.md  v1.0-MILESTONE-AUDIT.md  v2.0-CLOSEOUT.md
.planning/milestones/: v2.0-REQUIREMENTS.md  v2.0-ROADMAP.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
alembic/: env.py
alembic/versions/: 0001_phase1_baseline.py  0002_phase2_checkpoint_runtime.py  0003_phase5_background_operations.py  (+2 more)
config/: agents.yaml  cadence_policies.yaml  factors.yaml  memo_sections.yaml  model_profiles.yaml  monitoring.yaml  panels.yaml  rate_cards.yaml  run_policies.yaml  source_connectors.yaml  tool_bundles.yaml  tool_registry.yaml
docs/: architecture.md  factor_ontology.md  ingestion.md  memory_model.md  monitoring.md  panel_extension_path.md  prompting_strategy.md  runbook.md  tool_registry.md
n8n/: README.md  new_evidence_webhook.json  refresh_notification.json  weekly_portfolio_refresh.json  weekly_watchlist_refresh.json
scripts/: generate_phase2_examples.py
tests/: conftest.py  test_analog_graph.py  test_analysis_flow.py  test_api.py  test_api_security.py  test_cli.py  test_config_and_registry.py  test_connector_runtime.py  test_deployment.py  test_generated_examples.py  test_ingestion.py  test_live_connector_runtime.py  test_logging.py  test_monitoring_semantics.py  test_prompt_assets.py  test_providers.py  test_repository_semantics.py  test_retry.py  test_run_lifecycle.py  test_token_tracking.py  test_worker_runtime.py
(+265 files in other folders)
